# db-demo

./: README.md  docker-compose.yaml  mongo_seeder.py  mysql_seeder.py  poetry.toml  pyproject.toml  query_demo.py  requirements.txt
mongo_db/: __init__.py  db_config.py  models.py  modes.py
sql_db/: db_config.py  models.py  seeder.py
