[project]
name = "db-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "MartinYu",email = "martin.yu@swag.live"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "faker (>=37.4.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
